[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/ui/Cards.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ui/cardsui.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/backgrounds/outline.png" type="Texture" id=3]

[sub_resource type="Theme" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = 852.467
margin_top = 338.085
margin_right = 892.468
margin_bottom = 378.085
rect_scale = Vector2( 6, 8 )
mouse_filter = 1
theme = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Control"]
margin_left = 0.501709
margin_top = -0.232285
margin_right = 375.502
margin_bottom = 522.768
rect_scale = Vector2( 0.0999339, 0.0760663 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Symbol" type="TextureRect" parent="Control"]
margin_left = 32.7926
margin_top = 2.24707
margin_right = 72.7926
margin_bottom = 42.2471
rect_scale = Vector2( 0.0651928, 0.0444336 )
rect_clip_content = true
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardName" type="Label" parent="Control"]
margin_left = 3.91164
margin_top = 2.24129
margin_right = 43.9116
margin_bottom = 16.2413
rect_rotation = 0.0589313
rect_scale = Vector2( 0.152142, 0.128617 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cost" type="Label" parent="Control"]
margin_left = 28.1819
margin_top = 2.07126
margin_right = 68.1819
margin_bottom = 16.0713
rect_scale = Vector2( 0.212352, 0.152279 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="Image" type="TextureRect" parent="Control"]
margin_left = 4.13568
margin_top = 4.69432
margin_right = 44.1357
margin_bottom = 44.6943
rect_scale = Vector2( 0.776293, 0.43379 )
rect_clip_content = true
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type" type="Label" parent="Control"]
margin_left = 3.75079
margin_top = 22.6719
margin_right = 56.7508
margin_bottom = 36.6719
rect_scale = Vector2( 0.16844, 0.128696 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Ability1" type="Label" parent="Control"]
margin_left = 4.08253
margin_top = 25.7732
margin_right = 44.0825
margin_bottom = 39.7732
rect_scale = Vector2( 0.184726, 0.152406 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Ability2" type="Label" parent="Control"]
margin_left = 3.66893
margin_top = 28.6915
margin_right = 43.6689
margin_bottom = 42.6915
rect_scale = Vector2( 0.185295, 0.145427 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlavorAbility" type="Label" parent="Control"]
margin_left = 3.70026
margin_top = 31.632
margin_right = 48.7003
margin_bottom = 45.632
rect_scale = Vector2( 0.18894, 0.13781 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Damage" type="Label" parent="Control"]
margin_left = 29.2079
margin_top = 36.0941
margin_right = 69.2079
margin_bottom = 50.0941
rect_scale = Vector2( 0.0839449, 0.0707462 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="Control"]
margin_left = 32.6933
margin_top = 36.3857
margin_right = 72.6933
margin_bottom = 50.3857
rect_scale = Vector2( 0.0568176, 0.0688832 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outline" type="Sprite" parent="Control"]
visible = false
position = Vector2( 19.9012, 20.1815 )
scale = Vector2( 0.607017, 0.427032 )
texture = ExtResource( 3 )
